--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to the Regulatory Standards Commission</h1>
     <button id="login-btn">Login with Roblox</button>
     <script>
-        const clientId = '8625000414069022120'; // Replace with your actual Roblox OAuth client ID
+        const clientId = '8625000414069022120'; // 
         const redirectUri = 'http://127.0.0.1:8090/_/'; // 
 
         document.getElementById('login-btn').addEventListener('click', () => {
